switch to cached thread pool